# CameraX-Vulkan-Example

./: build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/com/manzill/example/camxvk/: MainActivity.kt  MainScreen.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
core/camera/: build.gradle.kts
core/camera/src/main/cpp/: CMakeLists.txt  logger.h  main.c
core/camera/src/main/kotlin/com/manzill/example/camxvk/core/camera/: SurfaceCallback.kt  VulkanCameraEngine.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
